Fixes some Sonar complaints